--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,49 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{centofanti2025,
+		bibtex_show = {true},
+		abbr = {centofanti2025.png},
+       author = {{Centofanti}, Ezequiel and {Farrens}, Samuel and {Starck}, Jean-Luc and {Liaudat}, Tobías I. and {Szapiro}, Alex and {Pollack}, Jennifer},
+        title = "{Breaking the degeneracy in stellar spectral classification from single wide-band images}",
+		abstract = "{The spectral energy distribution (SED) of observed stars in wide-field images is crucial for chromatic point spread function (PSF) modelling methods, which use unresolved stars as integrated spectral samples of the PSF across the field of view. This is particu- larly important for weak gravitational lensing studies, where precise PSF modelling is essential to get accurate shear measurements. Previous research has demonstrated that the SED of stars can be inferred from low-resolution observations using machine-learning classification algorithms. However, a degeneracy exists between the PSF size, which can vary significantly across the field of view, and the spectral type of stars, leading to strong limitations of such methods. We propose a new SED classification method that incorpo- rates stellar spectral information by using a preliminary PSF model, thereby breaking this degeneracy and enhancing the classification accuracy. Our method involves calculating a set of similarity features between an observed star and a preliminary PSF model at different wavelengths and applying a support vector machine to these similarity features to classify the observed star into a specific stellar class. The proposed approach achieves a 91% top-two accuracy, surpassing machine-learning methods that do not consider the spectral variation of the PSF. Additionally, we examined the impact of PSF modelling errors on the spectral classification accuracy.}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2025,
+        month = jan,
+          eid = {arXiv:2501.16151},
+        pages = {arXiv:2501.16151},
+          doi = {10.48550/arXiv.2501.16151},
+archivePrefix = {arXiv},
+       arxiv = {2501.16151},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250116151C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mpetha2025,
+		bibtex_show = {true},
+		abbr = {mpetha2025.png},
+       author = {{Mpetha}, Charlie T. and {Taylor}, James E. and {Amoura}, Yuba and {Haggar}, Roan and {de Boer}, Thomas and {Guerrini}, Sacha and {Guinot}, Axel and {Hervas Peters}, Fabian and {Hildebrandt}, Hendrik and {Hudson}, Michael J. and {Kilbinger}, Martin and {Liaudat}, Tobías I. and {McConnachie}, Alan and {Van Waerbeke}, Ludovic and {Wittje}, Anna},
+        title = "{Cosmology from UNIONS weak lensing profiles of galaxy clusters}",
+		abstract = "{Cosmological information is encoded in the structure of galaxy clusters. In Universes with less matter and larger initial density perturbations, clusters form earlier and have more time to accrete material, leading to a more extended infall region. Thus, measuring the mean mass distribution in the infall region provides a novel cosmological test. The infall region is largely insensitive to baryonic physics, and provides a cleaner structural test than other measures of cluster assembly time such as concentration. We consider cluster samples from three publicly available galaxy cluster catalogues: the Spectrsopic Identification of eROSITA Sources (SPIDERS) catalogue, the X-ray and Sunyaev-Zeldovich effect selected clusters in the meta-catalogue M2C, and clusters identified in the Dark Energy Spectroscopic Instrument (DESI) Legacy Imaging Survey. Using a preliminary shape catalogue from the Ultraviolet Near Infrared Optical Northern Survey (UNIONS), we derive excess surface mass density profiles for each sample. We then compare the mean profile for the DESI Legacy sample, which is the most complete, to predictions from a suite of simulations covering a range of Ωm and σ8, obtaining constraints of Ωm=0.29±0.05 and σ8=0.80±0.04. We also measure mean (comoving) splashback radii for SPIDERS, M2C and DESI Legacy Imaging Survey clusters of 1.59+0.16-0.13cMpc/h, 1.30+0.25-0.13cMpc/h and 1.45±0.11cMpc/h respectively. Performing this analysis with the final UNIONS shape catalogue and the full sample of spectroscopically observed clusters in DESI, we can expect to improve on the best current constraints from cluster abundance studies by a factor of 2 or more.}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = jan,
+          eid = {arXiv:2501.09147},
+        pages = {arXiv:2501.09147},
+          doi = {10.48550/arXiv.2501.09147},
+archivePrefix = {arXiv},
+       arxiv = {2501.09147},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250109147M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
 @ARTICLE{khorashadizadeh2024,
 		abbr = {khorashadizadeh2024.png},
 		bibtex_show = {true},
