--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -4,6 +4,15 @@
 %% Options [title, journal, year, month, html, slides, poster, project]
 %% 
 
+
+@article{2025_03_NumPEx_AG_TL,
+  title = {Seminar at La Maison de la Simulation, 2025, Saclay, France},
+  journal = {Towards fast and scalable uncertainty quantification for scientific imaging: Application to radio interferometric imaging},
+  year = {2025},
+  month = {April},
+  slides = {https://drive.google.com/file/d/1tfgxeFUAG66rWaEJLDZeniZfwYhoHIY4/view?usp=share_link},
+  }
+
 @article{2025_03_NumPEx_AG_TL,
   title = {NumPEx general assemby, 2025, Inria Saclay, France},
   journal = {Overview of reconstruction and uncertainty quantification methods for radio interferometric imaging},
