add last seminar

--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -5,7 +5,17 @@
 %% 
 
 
-@article{2025_03_NumPEx_AG_TL,
+
+
+@article{2025_04_ENS_seminar_TL,
+  title = {Seminar at the Scattering club, ENS, 2025 (online)},
+  journal = {Towards fast and scalable uncertainty quantification for scientific imaging: Application to radio interferometric imaging},
+  year = {2025},
+  month = {April},
+  slides = {https://drive.google.com/file/d/1E60PqsBzcYDFOiZK56JL3JGlByRs1ByV/view?usp=share_link},
+  }
+
+@article{2025_04_maison_simulation_TL,
   title = {Seminar at La Maison de la Simulation, 2025, Saclay, France},
   journal = {Towards fast and scalable uncertainty quantification for scientific imaging: Application to radio interferometric imaging},
   year = {2025},
