--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -8,7 +8,7 @@
 
 
 @article{2025_04_ENS_seminar_TL,
-  title = {Seminar at the Scattering club, ENS, 2025 (online)},
+  title = {Seminar at the Scattering club, 2025, ENS Ulm, (online).},
   journal = {Towards fast and scalable uncertainty quantification for scientific imaging: Application to radio interferometric imaging},
   year = {2025},
   month = {April},
