add mars2025 paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,29 @@
 
 @string{aps = {American Physical Society,}}
 
+
+@ARTICLE{mars2025,
+	bibtex_show = {true},
+	abbr = {mars2025.png},
+       author = {{Mars}, Matthijs and {Liaudat},  Tobías I. and {Whitney}, Jessica J. and {Betcke}, Marta M. and {McEwen}, Jason D.},
+        title = "{Generative imaging for radio interferometry with fast uncertainty quantification}",
+		abstract = "{With the rise of large radio interferometric telescopes, particularly the SKA, there is a growing demand for computationally efficient image reconstruction techniques. Existing reconstruction methods, such as the CLEAN algorithm or proximal optimisation approaches, are iterative in nature, necessitating a large amount of compute. These methods either provide no uncertainty quantification or require large computational overhead to do so. Learned reconstruction methods have shown promise in providing efficient and high quality reconstruction. In this article we explore the use of generative neural networks that enable efficient approximate sampling of the posterior distribution for high quality reconstructions with uncertainty quantification. Our RI-GAN framework, builds on the regularised conditional generative adversarial network (rcGAN) framework by integrating a gradient U-Net (GU-Net) architecture - a hybrid reconstruction model that embeds the measurement operator directly into the network. This framework uses Wasserstein GANs to improve training stability in combination with regularisation terms that combat mode collapse, which are typical problems for conditional GANs. This approach takes as input the dirty image and the point spread function (PSF) of the observation and provides efficient, high-quality image reconstructions that are robust to varying visibility coverages, generalises to images with an increased dynamic range, and provides informative uncertainty quantification. Our methods provide a significant step toward computationally efficient, scalable, and uncertainty-aware imaging for next-generation radio telescopes.}",
+      journal = {arXiv e-prints},
+     keywords = {Instrumentation and Methods for Astrophysics, Machine Learning},
+         year = 2025,
+        month = jul,
+          eid = {arXiv:2507.21270},
+        pages = {arXiv:2507.21270},
+          doi = {10.48550/arXiv.2507.21270},
+archivePrefix = {arXiv},
+       eprint = {2507.21270},
+	   arxiv = {2507.21270},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250721270M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{tachella2025,
 	bibtex_show = {true},
 	abbr = {tachella2025.png},
@@ -24,7 +47,7 @@
           doi = {10.48550/arXiv.2505.20160},
 archivePrefix = {arXiv},
        eprint = {2505.20160},
-	   arxiv = {22505.20160},
+	   arxiv = {2505.20160},
  primaryClass = {eess.IV},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250520160T},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
