update papers with journal info and codes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,7 @@
           eid = {arXiv:2507.21270},
         pages = {arXiv:2507.21270},
           doi = {10.48550/arXiv.2507.21270},
+		  code = {https://github.com/astro-informatics/rcGAN},
 archivePrefix = {arXiv},
        eprint = {2507.21270},
 	   arxiv = {2507.21270},
@@ -45,6 +46,7 @@ archivePrefix = {arXiv},
           eid = {arXiv:2505.20160},
         pages = {arXiv:2505.20160},
           doi = {10.48550/arXiv.2505.20160},
+		  code = {https://github.com/deepinv/deepinv/},
 archivePrefix = {arXiv},
        eprint = {2505.20160},
 	   arxiv = {2505.20160},
@@ -66,6 +68,7 @@ archivePrefix = {arXiv},
 	archivePrefix = {arXiv},
        arxiv = {2501.16151},
 	DOI= "10.1051/0004-6361/202452224",
+	code = {https://github.com/CentofantiEze/sed_spectral_classification},
 	url= "https://doi.org/10.1051/0004-6361/202452224",
 	journal = {A&A},
 	year = 2025,
@@ -100,17 +103,17 @@ archivePrefix = {arXiv},
 		abbr = {khorashadizadeh2024.png},
 		bibtex_show = {true},
        author = {{Khorashadizadeh}, AmirEhsan and {Liaudat}, Tobías I. and {Liu}, Tianlin and {McEwen}, Jason D. and {Dokmani{\'c}}, Ivan},
-        title = "{LoFi: Scalable Local Image Reconstruction with Implicit Neural Representation}",
-		abstract = "{Neural fields or implicit neural representations (INRs) have attracted significant attention in machine learning and signal processing due to their efficient continuous representation of images and 3D volumes. In this work, we build on INRs and introduce a coordinate-based local processing framework for solving imaging inverse problems, termed LoFi (Local Field). Unlike conventional methods for image reconstruction, LoFi processes local information at each coordinate separately by multi-layer perceptrons (MLPs), recovering the object at that specific coordinate. Similar to INRs, LoFi can recover images at any continuous coordinate, enabling image reconstruction at multiple resolutions. With comparable or better performance than standard CNNs for image reconstruction, LoFi achieves excellent generalization to out-of-distribution data and memory usage almost independent of image resolution. Remarkably, training on 1024x1024 images requires just 3GB of memory -- over 20 times less than the memory typically needed by standard CNNs. Additionally, LoFi's local design allows it to train on extremely small datasets with less than 10 samples, without overfitting or the need for regularization or early stopping. Finally, we use LoFi as a denoising prior in a plug-and-play framework for solving general inverse problems to benefit from its continuous image representation and strong generalization. Although trained on low-resolution images, LoFi can be used as a low-dimensional prior to solve inverse problems at any resolution. We validate our framework across a variety of imaging modalities, from low-dose computed tomography to radio interferometric imaging.}",
-      journal = {arXiv e-prints},
-     keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning},
-         year = 2024,
-        month = nov,
+        title = "{LoFi: Neural Local Fields for Scalable Image Reconstruction}",
+		abstract = "{We introduce LoFi (Local Field)—a coordinate-based framework for image reconstruction which combines advantages of convolutional neural networks (CNNs) and neural fields or implicit neural representations (INRs). Unlike conventional deep neural networks, LoFi reconstructs an image one coordinate at a time, by processing only adaptive local information from the input which is relevant for the target coordinate. Similar to INRs, LoFi can efficiently recover images at any continuous coordinate, enabling image reconstruction at multiple resolutions. LoFi achieves excellent generalization to out-of-distribution data with memory usage almost independent of image resolution, while performing as well or better than standard deep learning models like CNNs and vision transformers (ViTs). Remarkably, training on 1024 x 1024 images requires less than 200MB of memory— much less than standard CNNs and ViTs. Our experiments show that Locality enables training on extremely small datasets with ten or fewer samples without overfitting and without explicit regularization or early stopping.}",
+      journal = {IEEE Transactions on Computational Imaging},
+     keywords = {Image reconstruction;Inverse problems;Computed tomography;Memory management;Feature extraction;Training;Noise;Image resolution;X-ray imaging;Transformers},
+         year = 2025,
+        month = aug,
           eid = {arXiv:2411.04995},
-        pages = {arXiv:2411.04995},
-          doi = {10.48550/arXiv.2411.04995},
+        pages = {1-14},
+          doi = {10.1109/TCI.2025.3594983},
+		  code = {https://github.com/AmirEhsan95/LoFi},
 archivePrefix = {arXiv},
-       eprint = {2411.04995},
 	   arxiv = {2411.04995},
  primaryClass = {cs.CV},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv241104995K},
@@ -197,6 +200,7 @@ archivePrefix = {arXiv},
         month = may,
           eid = {arXiv:2406.15424},
         pages = {arXiv:2406.15424},
+		code = {https://github.com/astro-informatics/rcGAN},
 archivePrefix = {arXiv},
 	 	arxiv = {2406.15424},
        eprint = {2406.15424},
