--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -6,6 +6,29 @@
 
 
 
+@article{2025_10_CIRM_TL,
+  title = {Conference Inverse Problems in Imaging, Foundations & applications, 2025, CIRM, Marseille, France.},
+  journal = {Point spread function wavefront recovery: phase retrieval with automatic differentiation},
+  year = {2025},
+  month = {October},
+  slides = {https://drive.google.com/file/d/12ugNVLEE_K0eiD6yY6XiRIF2PxbdaZr7/view?usp=share_link},
+}
+
+@article{2025_09_CEA_seminar_cadarache_TL,
+  title = {Data Science seminar at CEA Cadarache, 2025, Cadarache, France.},
+  journal = {Data Science and AI for Astronomy and Astrophysics},
+  year = {2025},
+  month = {September},
+  slides = {https://drive.google.com/file/d/1xDZCs174mhd9wXQFLo1Q4X3YzhmSrAAf/view?usp=share_link},
+}
+
+@article{2025_06_CEA_seminar_AI4science_TL,
+  title = {AI for science seminar at CEA Saclay, 2025, Saclay, France.},
+  journal = {Scientific AI for the physical sciences},
+  year = {2025},
+  month = {June},
+  slides = {https://drive.google.com/file/d/1gSP2O-cnXeSEGE0VH7BdAflIaMSJ1FI3/view?usp=share_link},
+}
 
 @article{2025_04_ENS_seminar_TL,
   title = {Seminar at the Scattering club, 2025, ENS Ulm, (online).},
