add unions paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,27 @@
 @string{aps = {American Physical Society,}}
 
 
+@article{gwyn2025,
+	bibtex_show = {true},
+	abbr = {gwyn2025_unions_cfis.png},
+doi = {10.3847/1538-3881/ae03ab},
+url = {https://doi.org/10.3847/1538-3881/ae03ab},
+archivePrefix = {arXiv},
+eprint = {2503.13783},
+arxiv = {2503.13783},
+year = {2025},
+month = {nov},
+publisher = {The American Astronomical Society},
+volume = {170},
+number = {6},
+pages = {324},
+author = {Gwyn, Stephen and McConnachie, Alan W. and Cuillandre, Jean-Charles and Chambers, Kenneth C. and Magnier, Eugene A. and de Boer, Thomas and Hudson, Michael J. and Oguri, Masamune and Furusawa, Hisanori and Hildebrandt, Hendrik and Carlberg, Raymond and Ellison, Sara L. and Furusawa, Junko and Gavazzi, Raphaël and Ibata, Rodrigo and Mellier, Yannick and Osato, Ken and Aussel, H. and Baumont, Lucie and Bayer, Manuel and Boulade, Olivier and Côté, Patrick and Chemaly, David and Daley, Cail and Duc, Pierre-Alain and Durret, Florence and Ellien, A. and Fabbro, Sébastien and Ferreira, Leonardo and Fitriana, Itsna K. and Le Floc’h, Emeric and Fudamoto, Yoshinobu and Gao, Hua and Goh, L. W. K. and Goto, Tomotsugu and Guerrini, Sacha and Guinot, Axel and Hénault-Brunet, Vincent and Hammer, Francois and Harikane, Yuichi and Hayashi, Kohei and Heesters, Nick and Ichikawa, Kohei and Kilbinger, Martin and Kuzma, P. B. and Li, Qinxun and Liaudat, Tobías I. and Lin, Chien-Cheng and Müller, Oliver and Martin, Nicolas F. and Matsuoka, Yoshiki and Medina, Gustavo E. and Miyatake, Hironao and Miyazaki, Satoshi and Mpetha, Charlie T. and Nagao, Tohru and Navarro, Julio F. and Niwano, Masafumi and Ogami, Itsuki and Okabe, Nobuhiro and Onoue, Masafusa and Paek, Gregory S. H. and Parker, Laura C. and Patton, David R. and Peters, Fabian Hervas and Prunet, Simon and Sánchez-Janssen, Rubén and Schultheis, M. and Sestito, Federico and Smith, Simon E. T. and Starck, J.-L. and Starkenburg, Else and Stone, Connor and Storfer, Christopher and Suzuki, Yoshihisa and Erben, T. and Taibi, Salvatore and Thomas, G. F. and Toba, Yoshiki and Uchiyama, Hisakazu and Valls-Gabaud, David and Venn, Kim A. and Van Waerbeke, Ludovic and Wainscoat, Richard J. and Wilkinson, Scott and Wittje, Anna and Yoshida, Taketo and Zhang, TianFang and Zhong, Yuxing},
+title = {UNIONS: The Ultraviolet Near-infrared Optical Northern Survey},
+journal = {The Astronomical Journal},
+abstract = {The Ultraviolet Near-Infrared Optical Northern Survey (UNIONS) is a “collaboration of collaborations” that is using the Canada-France-Hawai'i Telescope, the Pan-STARRS telescopes, and the Subaru Observatory to obtain ugriz images of a core survey region of 6250 deg2 of the northern sky. The 10 sigma point source depth of the data, as measured within a 2″ diameter aperture, are [u, g, r, i, z] = [23.7, 24.5, 24.2, 23.8, 23.3] in AB magnitudes. UNIONS is addressing some of the most fundamental questions in astronomy, including the properties of dark matter, the growth of structure in the Universe from the very smallest galaxies to large-scale structure, and the assembly of the Milky Way. It is set to become a major ground-based legacy survey for the northern hemisphere for the next decade, and it provides an essential northern complement to the static-sky science of the Vera C. Rubin Observatory's Legacy Survey of Space and Time. UNIONS supports the core science mission of the Euclid space mission by providing the data necessary in the northern hemisphere for the calibration of the wavelength dependence of the Euclid point-spread function and derivation of photometric redshifts in the North Galactic Cap. This region contains the highest quality sky for Euclid, with low backgrounds from the zodiacal light, stellar density, extinction, and emission from Galactic cirrus. Here, we describe the UNIONS survey components, science goals, data products, and the current status of the overall program.}
+}
+
+
 @ARTICLE{mars2025,
 	bibtex_show = {true},
 	abbr = {mars2025.png},
