add tom's paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,23 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{sprunck2025,
+	bibtex_show = {true},
+	selected={true},
+	abbr = {sprunck2025.png},
+	code = {https://github.com/aleph-group/Priors_selection},
+      title={Bayesian model selection and misspecification testing in imaging inverse problems only from noisy and partial measurements}, 
+      author={Tom Sprunck and Marcelo Pereyra and Tobias Liaudat},
+      year={2025},
+	  journal = {arXiv e-prints},
+      eprint={2510.27663},
+	  arxiv = {2510.27663},
+	  month = oct,
+      archivePrefix={arXiv},
+      primaryClass={eess.IV},
+      url={https://arxiv.org/abs/2510.27663},
+	  abstract = {Modern imaging techniques heavily rely on Bayesian statistical models to address difficult image reconstruction and restoration tasks. This paper addresses the objective evaluation of such models in settings where ground truth is unavailable, with a focus on model selection and misspecification diagnosis. Existing unsupervised model evaluation methods are often unsuitable for computational imaging due to their high computational cost and incompatibility with modern image priors defined implicitly via machine learning models. We herein propose a general methodology for unsupervised model selection and misspecification detection in Bayesian imaging sciences, based on a novel combination of Bayesian cross-validation and data fission, a randomized measurement splitting technique. The approach is compatible with any Bayesian imaging sampler, including diffusion and plug-and-play samplers. We demonstrate the methodology through experiments involving various scoring rules and types of model misspecification, where we achieve excellent selection and detection accuracy with a low computational cost.}, 
+}
 
 @article{gwyn2025,
 	bibtex_show = {true},
@@ -268,7 +285,6 @@ archivePrefix = {arXiv},
 	code = {https://github.com/astro-informatics/proxnest},
 	URL = {https://www.mdpi.com/2673-9984/9/1/13},
 	ISSN = {2673-9984},
-	selected={true},
 	abstract = {{Proximal nested sampling was introduced recently to open up Bayesian model selection for high-dimensional problems such as computational imaging. The framework is suitable for models with a log-convex likelihood, which are ubiquitous in the imaging sciences. The purpose of this article is two-fold. First, we review proximal nested sampling in a pedagogical manner in an attempt to elucidate the framework for physical scientists. Second, we show how proximal nested sampling can be extended in an empirical Bayes setting to support data-driven priors, such as deep neural networks learned from training data.}},
 	doi = {10.3390/psf2023009013},
 }
