--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -6,6 +6,14 @@
 
 
 
+@article{2026_01_Lumiere_conference_TL,
+  title = {Lumière conference, 2026, Institut Pascal, Saclay, France.},
+  journal = {Uncertainty quantification for high-dimensional inverse problems with deep data-driven priors},
+  year = {2026},
+  month = {January},
+  slides = {https://drive.google.com/file/d/1ZUWmlS1k9UhF0jlxWAIlqfENF6I6WAJt/view?usp=share_link},
+}
+
 @article{2025_10_CIRM_TL,
   title = {Conference Inverse Problems in Imaging, Foundations & applications, 2025, CIRM, Marseille, France.},
   journal = {Point spread function wavefront recovery: phase retrieval with automatic differentiation},
